<resources>
    <string name="app_name">ContiForno</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_gestione_conto">GestioneConto</string>
    <string name="nome_cliente">Nome</string>
    <string name="gestione_importo">Importo dovuto</string>
    <string name="aggiungi_cliente" > Aggiungi cliente </string>
    <string name="aggiungi_spesa">Aggiungi una spesa</string>
    <string name="elenco_mesi">Visualizza mesi precedenti</string>
    <string name="azzera">Azzera conto</string>
    <string name="aggiungi_mese" >Aggiungi un mese</string>
</resources>
